<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/shape_background"
    tools:context=".MainActivity">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        app:cardBackgroundColor="#00FAF8F8"
        android:elevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="#00FAF8F8"
                android:elevation="8dp"
                >


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_latfy"
                    android:importantForAccessibility="no" />
            </androidx.cardview.widget.CardView>
            
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_titulo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"
                    />
                <EditText
                    android:id="@+id/edit_text_nome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/txt_hint__edit_nome"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edit_text_sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/txt_hint__edit_sobrenome"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edit_text_tipo_servico"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/txt_hint__edit_tipo_servico"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edit_text_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/txt_hint__edit_telefone"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    android:importantForAutofill="no" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_button_finalizar"
                android:layout_margin="32dp"
                android:textColor="@color/white"
                android:background="@drawable/shape_button"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
